PROJECT (MOONSHINE C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4.6)

SET(SRC "${MOONSHINE_SOURCE_DIR}")
SET(BIN "${MOONSHINE_BINARY_DIR}") 
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS 1)
SET(CMAKE_MODULE_PATH "${SRC}/cmake")
INCLUDE(FindPkgConfig)

PKG_CHECK_MODULES(GLIB REQUIRED glib-2.0 gthread-2.0)
#PKG_CHECK_MODULES(DBUS REQUIRED dbus-1)
PKG_SEARCH_MODULE(LUA REQUIRED lua lua5.1)
PKG_CHECK_MODULES(GNET REQUIRED gnet-2.0)

FIND_PACKAGE(SLANG REQUIRED)

FIND_PROGRAM(RE2C re2c)
FIND_PROGRAM(LUABIN lua lua51 lua5.1 lua50 lua5.0)

IF (NOT LUABIN)
	MESSAGE(FATAL_ERROR "moonshine requires the lua binary to build")
ENDIF()

IF (NOT RE2C)
	MESSAGE(FATAL_ERROR "moonshine requires re2c!")
ENDIF()

EXEC_PROGRAM(${LUABIN}
	ARGS -e "'if pcall(require, \"lpeg\") then print \"YES\" else print \"NO\" end'"
	OUTPUT_VARIABLE LUA_LPEG)

IF(NOT LUA_LPEG)
	MESSAGE(FATAL_ERROR "moonshine requires the lpeg lua package.")
ENDIF()

INCLUDE_DIRECTORIES(BEFORE
	${SLANG_INCLUDE_DIR}
	${LUA_INCLUDE_DIRS}
	${GLIB_INCLUDE_DIRS}
	${GNET_INCLUDE_DIRS}
	${GTHREAD_INCLUDE_DIRS}
	${MOONSHINE_BINARY_DIR}/generated)

ADD_DEFINITIONS("-std=gnu99 -Wall -Winline")
ADD_DEFINITIONS("${GLIB_CFLAGS_OTHER} ${GNET_CFLAGS_OTHER} ${LUA_CFLAGS_OTHER}")

SET(VER "p3")
SET(MOONSHINE_VERSION ${VER})

OPTION(IRONTROUSERS 
	"Add build/modules and runtime/ into the lua package.cpath and path")

IF (NOT IRONTROUSERS)
	MESSAGE(STATUS "Irontrousers: disabled")
	SET(MOONSHINE_RUNTIME "${CMAKE_INSTALL_PREFIX}/share/moonshine/?.lua")
	SET(MOONSHINE_MODULES "${CMAKE_INSTALL_PREFIX}/lib/moonshine/?.so")
ELSE()
	MESSAGE(STATUS "Irontrousers: enabled")
	SET(MOONSHINE_RUNTIME "${SRC}/runtime/?.lua")
	SET(MOONSHINE_MODULES "${BIN}/modules/?.so")
ENDIF()


CONFIGURE_FILE(config.h.in
	${MOONSHINE_BINARY_DIR}/generated/moonshine/config.h
	@ONLY IMMEDIATE)

ADD_SUBDIRECTORY(src ${PROJECT_BINARY_DIR})

INSTALL(DIRECTORY runtime/ DESTINATION ${MOONSHINE_RUNTIME})
