PROJECT (MOONSHINE C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4.6)

SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS 1)
SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
INCLUDE(FindPkgConfig)

PKG_CHECK_MODULES(GLIB REQUIRED glib-2.0 gthread-2.0)
#PKG_CHECK_MODULES(DBUS REQUIRED dbus-1)
PKG_SEARCH_MODULE(LUA REQUIRED lua lua5.1)
PKG_CHECK_MODULES(LUABIT REQUIRED lua5.1-bitop)
PKG_CHECK_MODULES(LUABIT REQUIRED lua5.1-lpeg)
PKG_CHECK_MODULES(GNET REQUIRED gnet-2.0)

FIND_PACKAGE(SLANG REQUIRED)
FIND_PROGRAM(RE2C re2c)
FIND_PROGRAM(LUABIN lua lua51 lua5.1 lua50 lua5.0)

IF (NOT RE2C)
	MESSAGE(FATAL_ERROR "moonshine requires re2c!")
ENDIF()

INCLUDE_DIRECTORIES(BEFORE
	${SLANG_INCLUDE_DIR}
	${LUA_INCLUDE_DIRS}
	${GLIB_INCLUDE_DIRS}
	${GNET_INCLUDE_DIRS}
	${GTHREAD_INCLUDE_DIRS})

ADD_DEFINITIONS("-std=gnu99 -Wall -Winline -Werror")
ADD_DEFINITIONS("${GLIB_CFLAGS_OTHER} ${GNET_CFLAGS_OTHER} ${LUA_CFLAGS_OTHER}")

SET(MOONSHINE_VERSION "p4")

OPTION(IRONTROUSERS 
	"Add build/modules and runtime/ into the lua package.cpath and path")

IF (NOT IRONTROUSERS)
	MESSAGE(STATUS "Irontrousers: disabled")
	SET(MOONSHINE_PATH  "${CMAKE_INSTALL_PREFIX}/share/moonshine/?.lua")
	SET(MOONSHINE_CPATH "${CMAKE_INSTALL_PREFIX}/lib/moonshine/?${CMAKE_SHARED_MODULE_SUFFIX}")
ELSE()
	MESSAGE(STATUS "Irontrousers: enabled")
	SET(MOONSHINE_PATH  "${CMAKE_CURRENT_SOURCE_DIR}/runtime/?.lua")
	SET(MOONSHINE_CPATH "${CMAKE_CURRENT_BINARY_DIR}/modules/?.${CMAKE_SHARED_MODULE_SUFFIX}")
ENDIF()

ADD_SUBDIRECTORY(src)

IF (NOT IRONTROUSERS)
	INSTALL(DIRECTORY runtime/ DESTINATION "${CMAKE_INSTALL_PREFIX}/share/moonshine/")
ENDIF()

