PROJECT (MOONSHINE C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4.6)

SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS 1)
SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
INCLUDE(FindPkgConfig)

PKG_CHECK_MODULES(GLIB REQUIRED glib-2.0)
# gthread-2.0)
PKG_CHECK_MODULES(GNET REQUIRED gnet-2.0)
PKG_CHECK_MODULES(PURPLE REQUIRED purple)
PKG_SEARCH_MODULE(LUA REQUIRED lua lua5.1)

FIND_PACKAGE(LPEG REQUIRED)
FIND_PACKAGE(LUABIT REQUIRED)
FIND_PROGRAM(LUA lua)
FIND_PROGRAM(RE2C re2c)

IF (NOT RE2C)
    MESSAGE(FATAL_ERROR "moonshine requires re2c!")
ENDIF()

INCLUDE_DIRECTORIES(BEFORE
    ${LUA_INCLUDE_DIRS}
    ${GLIB_INCLUDE_DIRS}
    ${GNET_INCLUDE_DIRS}
#    ${GTHREAD_INCLUDE_DIRS}
    ${PURPLE_INCLUDE_DIRS})

ADD_DEFINITIONS("-std=gnu99 -Wall -Werror")
ADD_DEFINITIONS(
    ${GLIB_CFLAGS_OTHER}
    ${GNET_CFLAGS_OTHER}
    ${LUA_CFLAGS_OTHER} ${PURPLE_CFLAGS_OTHER})

SET(MOONSHINE_VERSION "p4")

OPTION(DEVELOPER
    "Add build/modules and runtime/ into the lua package.cpath and path")

OPTION(MOONSHINE_USE_GET_WCH
    "Use get_wch() instead reading into utf8 bytes with getch()" TRUE)

IF (NOT DEVELOPER)
    MESSAGE(STATUS "Developer Mode: disabled")
    SET(MOONSHINE_PATH  "${CMAKE_INSTALL_PREFIX}/share/moonshine/?.lua")
    SET(MOONSHINE_CPATH "${CMAKE_INSTALL_PREFIX}/lib/moonshine/?${CMAKE_SHARED_MODULE_SUFFIX}")
ELSE()
    MESSAGE(STATUS "Developer Mode: enabled")
    SET(MOONSHINE_PATH  "${CMAKE_CURRENT_SOURCE_DIR}/runtime/?.lua")
    SET(MOONSHINE_CPATH "${CMAKE_CURRENT_BINARY_DIR}/modules/?.${CMAKE_SHARED_MODULE_SUFFIX}")
ENDIF()

ADD_SUBDIRECTORY(src)

IF (NOT DEVELOPER)
    INSTALL(DIRECTORY runtime/ DESTINATION "${CMAKE_INSTALL_PREFIX}/share/moonshine/")
ENDIF()

