PROJECT (MOONSHINE_CORE C)

ADD_EXECUTABLE(moonshine 
	ms-util.c
	ms-term.c
	ms-async-queue-source.c
	ms-signal.c
	ms-lua.c
	${MOONSHINE_CORE_BINARY_DIR}/ms-parseopt.c
	ms-main.c)

TARGET_LINK_LIBRARIES(moonshine
	${SLANG_LIBRARY}
	${GLIB_LIBRARIES}
	${LUA_LIBRARIES})


FIND_PROGRAM(RE2C re2c)

IF (NOT RE2C)
	MESSAGE(FATAL_ERROR "moonshine requires re2c!")
ENDIF()

INCLUDE_DIRECTORIES ( ${MOONSHINE_CORE_SOURCE_DIR} )
ADD_CUSTOM_COMMAND(OUTPUT ${MOONSHINE_CORE_BINARY_DIR}/ms-parseopt.c
	COMMAND ${RE2C} ${MOONSHINE_CORE_SOURCE_DIR}/ms-parseopt.re2c.c > ${MOONSHINE_CORE_BINARY_DIR}/ms-parseopt.c
	MAIN_DEPENDENCY ${MOONSHINE_CORE_SOURCE_DIR}/ms-parseopt.re2c.c 
	WORKING_DIRECTORY ${MOONSHINE_CORE_SOURCE_DIR})

INSTALL(TARGETS moonshine RUNTIME DESTINATION bin)
