PROJECT(MOONSHINE_MODULES C)

SET(MOONSHINE_MODULES_BINARY_DIR "${MOONSHINE_BINARY_DIR}/moonshine")

ADD_SUBDIRECTORY(ui)

INCLUDE_DIRECTORIES(BEFORE ${MOONSHINE_CORE_SOURCE_DIR})

SET(MODULES parseopt_core)

FOREACH(lib ${MODULES})
	ADD_LIBRARY(${lib} MODULE ${lib}.c)
	TARGET_LINK_LIBRARIES(${lib} ${GLIB_LIBRARIES} ${SLANG_LIBRARY})
	SET_TARGET_PROPERTIES(${lib} PROPERTIES PREFIX "")
ENDFOREACH()

INSTALL(TARGETS ${MODULES} LIBRARY DESTINATION "${MOONSHINE_MODULES}/moonshine")
