PROJECT(MOONSHINE_MODULES C)

SET(MOONSHINE_MODULES_BINARY_DIR "${MOONSHINE_BINARY_DIR}/moonshine")

PKG_CHECK_MODULES(GNET REQUIRED gnet-2.0)

ADD_LIBRARY(net MODULE net.c)
TARGET_LINK_LIBRARIES(net 
	${GLIB_LIBRARIES} ${GNET_LIBRARIES})
SET_TARGET_PROPERTIES(net PROPERTIES PREFIX "")
INSTALL(TARGETS net LIBRARY DESTINATION "${MOONSHINE_MODULES}/moonshine")

ADD_SUBDIRECTORY(ui)
ADD_SUBDIRECTORY(parseopt)
