PROJECT(MOONSHINE_MODULES C)

# SET(MOONSHINE_MODULES_BINARY_DIR "${MOONSHINE_BINARY_DIR}/moonshine")

PKG_CHECK_MODULES(GLIB REQUIRED glib-2.0)

INCLUDE_DIRECTORIES(BEFORE ${MOONSHINE_CORE_SOURCE_DIR} ${GLIB_INCLUDE_DIRS})

#ADD_LIBRARY(loop MODULE loop.c)
#TARGET_LINK_LIBRARIES(loop ${GLIB_LIBRARIES})
#SET_TARGET_PROPERTIES(loop PROPERTIES PREFIX "" OUTPUT_NAME loop)
#INSTALL(TARGETS loop LIBRARY DESTINATION "${MOONSHINE_MODULES}/moonshine")

ADD_SUBDIRECTORY(net)
ADD_SUBDIRECTORY(ui)
ADD_SUBDIRECTORY(parseopt)
