PROJECT (MOONSHINE_NET C)

SET(NET_MODULES client)

PKG_CHECK_MODULES(GNET REQUIRED gnet-2.0)


INCLUDE_DIRECTORIES(BEFORE ${MOONSHINE_CORE_SOURCE_DIR})

FOREACH(lib ${NET_MODULES})
	ADD_LIBRARY(net_${lib} MODULE ${lib}.c)
	TARGET_LINK_LIBRARIES(net_${lib} ${GLIB_LIBRARIES} ${GNET_LIBRARIES})
	SET_TARGET_PROPERTIES(net_${lib} PROPERTIES PREFIX "" OUTPUT_NAME ${lib})
ENDFOREACH()

STRING(REGEX REPLACE "([A-Za-z]+)" "net_\\1" NET_MODULE_TARGETS "${NET_MODULES}")
INSTALL(TARGETS ${NET_MODULE_TARGETS} LIBRARY DESTINATION "${MOONSHINE_MODULES}/moonshine/net")
