PROJECT(MOONSHINE_PARSEOPT C)

#SET(MOONSHINE_PARSEOPT_BINARY_DIR "${MOONSHINE_BINARY_DIR}/moonshine/parseopt")
INCLUDE_DIRECTORIES(BEFORE
	${MOONSHINE_CORE_SOURCE_DIR}
	${MOONSHINE_PARSEOPT_SOURCE_DIR}
	${MOONSHINE_PARSEOPT_BINARY_DIR})

FIND_PROGRAM(RE2C re2c)

IF (NOT RE2C)
	MESSAGE(FATAL_ERROR "moonshine requires re2c!")
ENDIF()

ADD_CUSTOM_COMMAND(
	OUTPUT ${MOONSHINE_PARSEOPT_BINARY_DIR}/parseopt.c
	COMMAND ${RE2C} parseopt.re2c.c > ${MOONSHINE_PARSEOPT_BINARY_DIR}/parseopt.c
	MAIN_DEPENDENCY parseopt.re2c.c
	WORKING_DIRECTORY ${MOONSHINE_PARSEOPT_SOURCE_DIR})

ADD_LIBRARY(parseopt_core MODULE parseopt_core.c ${MOONSHINE_PARSEOPT_BINARY_DIR}/parseopt.c)
TARGET_LINK_LIBRARIES(parseopt_core ${GLIB_LIBRARIES} ${SLANG_LIBRARY})
SET_TARGET_PROPERTIES(parseopt_core PROPERTIES PREFIX "" OUTPUT_NAME "core")
INSTALL(TARGETS parseopt_core LIBRARY DESTINATION "${MOONSHINE_MODULES}/moonshine/parseopt")
