PROJECT (MOONSHINE_UI C)

SET(MODULES entry buffer statusbar term)

INCLUDE_DIRECTORIES(BEFORE ${MOONSHINE_CORE_SOURCE_DIR})

FOREACH(lib ${MODULES})
	ADD_LIBRARY(${lib} MODULE ${lib}.c)
	TARGET_LINK_LIBRARIES(${lib} ${GLIB_LIBRARIES} ${SLANG_LIBRARY})
	SET_TARGET_PROPERTIES(${lib} PROPERTIES PREFIX "")
ENDFOREACH()

INSTALL(TARGETS ${MODULES} LIBRARY DESTINATION "${MOONSHINE_MODULES}/moonshine/ui")
