PROJECT (MOONSHINE_UI C)

SET(MODULES entry buffer statusbar term)
SET(UI_MODULES ui_entry ui_buffer ui_statusbar ui_term)

INCLUDE_DIRECTORIES(BEFORE ${MOONSHINE_CORE_SOURCE_DIR})

FOREACH(lib ${MODULES})
	ADD_LIBRARY(ui_${lib} MODULE ${lib}.c)
	TARGET_LINK_LIBRARIES(ui_${lib} ${GLIB_LIBRARIES} ${SLANG_LIBRARY})
	SET_TARGET_PROPERTIES(ui_${lib} PROPERTIES PREFIX "" OUTPUT_NAME ${lib})
ENDFOREACH()

INSTALL(TARGETS ${UI_MODULES} LIBRARY DESTINATION "${MOONSHINE_MODULES}/moonshine/ui")
