PROJECT (MOONSHINE_UI C)

SET(MODULES entry buffer statusbar term)

INCLUDE_DIRECTORIES(BEFORE ${MOONSHINE_CORE_SOURCE_DIR})

FOREACH(lib ${MODULES})
	ADD_LIBRARY(ui_${lib} MODULE ${lib}.c)
	TARGET_LINK_LIBRARIES(ui_${lib} ${GLIB_LIBRARIES} ${SLANG_LIBRARY})
	SET_TARGET_PROPERTIES(ui_${lib} PROPERTIES PREFIX "" OUTPUT_NAME ${lib})
ENDFOREACH()

STRING(REGEX REPLACE "([A-Za-z]+)" "ui_\\1" UI_MODULES "${MODULES}")

INSTALL(TARGETS ${UI_MODULES} LIBRARY DESTINATION "${MOONSHINE_MODULES}/moonshine/ui")
